# CloseClaw

./: .gitignore  Cargo.toml  README.md  SOUL.md  config.default.toml  config.toml
crates/closeclaw/: Cargo.toml
crates/closeclaw-agent/: Cargo.toml
crates/closeclaw-agent/src/: context.rs  lib.rs  llm.rs  runtime.rs  tool_dispatch.rs
crates/closeclaw-channels/: Cargo.toml
crates/closeclaw-channels/src/: cli.rs  lib.rs  telegram.rs  webchat.rs
crates/closeclaw-core/: Cargo.toml
crates/closeclaw-core/src/: agent.rs  channel.rs  config.rs  error.rs  lib.rs  schedule.rs  session.rs  skill.rs  tool.rs  types.rs
crates/closeclaw-gateway/: Cargo.toml
crates/closeclaw-gateway/src/: events.rs  hub.rs  lib.rs  router.rs  schedule_store.rs  scheduler.rs  session_store.rs
crates/closeclaw-tools/: Cargo.toml
crates/closeclaw-tools/src/: browser.rs  browser_cdp.rs  exec.rs  lib.rs  read_file.rs  sandbox.rs  schedule.rs  self_manage.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/closeclaw/src/: main.rs  setup.rs
docs/: architecture.md  browser-tool.md  how-to-use.md  linkedin-auto-apply.md  under-the-hood.md
scripts/: playwright_cdp.py
skills/: code_review.md  daily_planner.md  file_organizer.md  linkedin_apply.md  news_briefing.md  research_assistant.md  summarizer.md  translator.md  weather_report.md  writing_helper.md
skills/code-review/: SKILL.md
skills/daily-planner/: SKILL.md
skills/file-organizer/: SKILL.md
skills/free-movie-finder/: SKILL.md
skills/linkedin-apply/: SKILL.md
skills/news-briefing/: SKILL.md
skills/research-assistant/: SKILL.md
skills/summarizer/: SKILL.md
skills/translator/: SKILL.md
skills/weather-report/: SKILL.md
skills/writing-helper/: SKILL.md
