[package]
name = "closeclaw-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
closeclaw-core = { path = "../closeclaw-core" }
closeclaw-gateway = { path = "../closeclaw-gateway" }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
teloxide = { workspace = true }
