[package]
name = "closeclaw-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde_yml = { workspace = true }
which = { workspace = true }
tracing = { workspace = true }
