[package]
name = "closeclaw-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
closeclaw-core = { path = "../closeclaw-core" }
closeclaw-agent = { path = "../closeclaw-agent" }
async-trait = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tempfile = "3"
